vlc-http/tests/snapshots/test_cases__case@action-playlist-set-new05-hist.txt.snap
---
source: vlc-http/tests/test_cases.rs
expression: output
input_file: vlc-http/tests/inputs/action-playlist-set-new05-hist.txt
---
[
  Harness(Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/status.json",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json",
  ), Model(
    items: {
      0: "file:///a",
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=pl_delete&id=0",
  ), Model(
    items: {
      1: "file:///b",
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=pl_delete&id=1",
  ), Model(
    items: {
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
    },
  )),
  LogEntry(Endpoint(
    path_and_query: "/requests/playlist.json?command=in_enqueue&input=file:///new",
  ), Model(
    items: {
      2: "file:///c",
      3: "file:///d",
      4: "file:///e",
      5: "file:///new",
    },
  )),
]
